Update index.html button with gtag

--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
         <img src="https://picsum.photos/400/250?random=10" alt="">
         <h3>E-commerce Website</h3>
         <p>Modern, responsive online store built with HTML, CSS, and JavaScript.</p>
-        <button class="btn" data-project="1">View Details</button>
+        <button onclick="gtag('event', 'project_view', { 'project_name': 'E-Commerce Website' })" class="btn" data-project="1">View Details</button>
       </div>
       <div class="project-card">
         <img src="https://picsum.photos/400/250?random=11" alt="">
         <h3>SEO Campaign</h3>
         <p>Boosted client’s organic traffic by 120% with a tailored SEO strategy.</p>
-        <button class="btn" data-project="2">View Details</button>
+        <button onclick="gtag('event', 'project_view', { 'project_name': 'SEO' })" class="btn" data-project="2">View Details</button>
       </div>
       <div class="project-card">
         <img src="https://picsum.photos/400/250?random=12" alt="">
         <h3>Portfolio Website</h3>
         <p>A sleek, responsive personal portfolio showcasing web projects.</p>
-        <button class="btn" data-project="3">View Details</button>
+        <button onclick="gtag('event', 'project_view', { 'project_name': 'Portfolio' })" class="btn" data-project="3">View Details</button>
       </div>
     </div>
   </section>
@@ -284,4 +284,5 @@
   </script>
 </body>
 </html>
+
 
