--- a/index.html
+++ b/index.html
@@ -19,121 +19,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/gif" href="icon/favicon.png">
   <title>Abhiram | Web Developer & Digital Marketer</title>
-  <style>
-    /* ===== Reset ===== */
-    * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family: "Poppins", sans-serif; color:#333; line-height:1.6; background:#f9f9f9;}
-    img {max-width:100%; display:block;}
-    a {text-decoration:none; color:inherit;}
-
-    /* ===== Header ===== */
-    header {
-      display:flex; justify-content:space-between; align-items:center;
-      padding:1rem 5%; background:#fff; position:sticky; top:0; z-index:1000;
-      box-shadow:0 2px 6px rgba(0,0,0,0.1);
-    }
-    header h1 {font-size:1.5rem; font-weight:700; color:#4CAF50;}
-    nav {display:flex; gap:2rem;}
-    nav a {font-weight:500; transition:0.3s;}
-    nav a:hover {color:#4CAF50;}
-    .menu-btn {display:none; font-size:1.5rem; cursor:pointer;}
-    @media(max-width:768px) {
-      nav {display:none; flex-direction:column; background:#fff; position:absolute; top:60px; right:5%; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
-      nav.active {display:flex;}
-      .menu-btn {display:block;}
-    }
-
-    /* ===== Hero ===== */
-    .hero {
-      min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
-      padding:0 10%; background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("https://picsum.photos/1600/900") center/cover;
-      color:#fff;
-    }
-    .hero h2 {font-size:clamp(2rem, 5vw, 3.5rem); margin-bottom:1rem;}
-    .hero p {font-size:clamp(1rem, 2vw, 1.3rem); margin-bottom:2rem;}
-    .btn {background:#4CAF50; color:#fff; padding:0.8rem 2rem; border-radius:50px; font-weight:600; transition:0.3s; cursor:pointer; border:none;}
-    .btn:hover {background:#43a047;}
-
-    /* ===== Features ===== */
-    .features {padding:5rem 10%; text-align:center;}
-    .features h2 {margin-bottom:2rem;}
-    .feature-grid {
-      display:grid; gap:1.5rem;
-      grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-    }
-    .card {
-      background:#fff; padding:2rem; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.1);
-      transition:transform 0.3s;
-    }
-    .card:hover {transform:translateY(-8px);}
-
-    /* ===== About ===== */
-    .about {
-      display:flex; align-items:center; gap:2rem; padding:5rem 10%;
-      flex-wrap:wrap;
-    }
-    .about img {flex:1 1 300px; border-radius:12px;}
-    .about-text {flex:1 1 300px;}
-
-    /* ===== Projects ===== */
-    .projects {padding:5rem 10%; text-align:center;}
-    .project-grid {
-      display:grid; gap:1.5rem;
-      grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-    }
-    .project-card {
-      background:#fff; padding:1.5rem; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.1);
-      display:flex; flex-direction:column; gap:1rem;
-    }
-    .project-card img {border-radius:8px;}
-    .project-card button {align-self:flex-start;}
-
-    /* ===== Modal ===== */
-    .modal {
-      position:fixed; top:0; left:0; width:100%; height:100%;
-      background:rgba(0,0,0,0.6); display:flex; justify-content:center; align-items:center;
-      visibility:hidden; opacity:0; transition:0.3s;
-    }
-    .modal.active {visibility:visible; opacity:1;}
-    .modal-content {
-      background:#fff; padding:2rem; border-radius:12px; max-width:500px; width:90%; position:relative;
-    }
-    .close-btn {
-      position:absolute; top:10px; right:15px; font-size:1.5rem; cursor:pointer;
-    }
-
-    /* ===== Testimonials ===== */
-    .testimonials {padding:5rem 10%; text-align:center;}
-    .testimonial-grid {
-      display:grid; gap:1.5rem;
-      grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-    }
-    .testimonial {
-      background:#fff; padding:2rem; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.1);
-    }
-    .testimonial img {width:70px; height:70px; border-radius:50%; margin-bottom:1rem;}
-
-    /* ===== Contact ===== */
-    .contact {padding:5rem 10%; text-align:center;}
-    form {max-width:500px; margin:auto; display:flex; flex-direction:column; gap:1rem;}
-    input, textarea {
-      padding:0.8rem; border:1px solid #ccc; border-radius:8px; font-family:inherit;
-    }
-    button[type="submit"] {
-      padding:0.8rem; border:none; border-radius:8px;
-      background:#4CAF50; color:#fff; font-weight:600; cursor:pointer;
-    }
-    button[type="submit"]:hover {background:#43a047;}
-
-    /* ===== Footer ===== */
-    footer {
-      background:#333; color:#fff; padding:2rem 5%;
-      display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:1rem;
-    }
-    footer p {margin:0;}
-  </style>
-</head>
+  </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5VH8TMZR"
@@ -295,6 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </script>
 </body>
 </html>
+
 
 
 
